adding Mailgun test

--- a/Trinug-Appharbor-Test/Views/Home/Contact.cshtml
+++ b/Trinug-Appharbor-Test/Views/Home/Contact.cshtml
@@ -37,6 +37,9 @@
         <span class="label">General:</span>
         <span><a href="mailto:General@example.com">General@example.com</a></span>
     </p>
+    <p>
+        @Html.ActionLink("Send Test Email", "SendMail", "Home")
+    </p>
 </section>
 
 <section class="contact">
