changed email label to use J's name

--- a/Trinug-Appharbor-Test/Views/Home/Contact.cshtml
+++ b/Trinug-Appharbor-Test/Views/Home/Contact.cshtml
@@ -38,7 +38,7 @@
         <span><a href="mailto:General@example.com">General@example.com</a></span>
     </p>
     <p>
-        @Html.ActionLink("Send Test Email", "SendMail", "Home")
+        @Html.ActionLink("Send Test Email to Justin", "SendMail", "Home")
     </p>
 </section>
 
